styles.css
body {
    margin: 0;
    padding: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgb(226, 226, 232);

    display: flex;
    flex-direction: column;
    gap: 24px;
    justify-content: center;
    align-items: center;
    
}

#outermost {
    box-sizing: border-box;
    height: 70%;
    min-width: 500px;
    border: 1.3px solid rgb(0, 0, 0);
    border-radius: 20px;
    background-color: rgb(103, 104, 108);

    display: flex;
    flex-direction: column;
}

#Display {
    min-width: 460px;
    min-height: 100px;
    border: 1.3px solid black;
    border-radius: 2px;
    background-color: rgb(215, 215, 223);
    margin: 36px 0 50px 0;
    padding-right: 8px;

    display: flex;
    justify-content: flex-end;
    align-items: center;
    align-self: center;

    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 32px;
    color: rgb(48, 47, 47);
}

#mainContainer {
    width: 460px;
    height: 70%;
    border: 1.2px solid black;
    border-radius: 20px;
    background-color: rgb(170, 170, 173);

    display: flex;
    justify-content: space-evenly;
    align-self: center;
}

#column1, #column2, #column3, #column4  {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    margin: 20px 0 20px 0;
}

/*column 1 buttons*/
#column1 button {
    height: 70px;
    width: 70px;
    border: 1.2px solid black;
    border-radius: 8px;
    background-color: rgb(226, 226, 232);


    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 22px;
    color: rgb(66, 64, 64);
}

/*column 2 buttons*/
#column2 button {
    height: 70px;
    width: 70px;
    border-radius: 8px;
    border: 1.2px solid black;
    border-radius: 8px;
    background-color: rgb(226, 226, 232);


    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 22px;
    color: rgb(66, 64, 64);
}

/*column 3 buttons*/
#column3 button {
    height: 70px;
    width: 70px;
    border-radius: 8px;
    border: 1.2px solid black;
    border-radius: 8px;
    background-color: rgb(226, 226, 232);

    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 22px;
    color: rgb(66, 64, 64);
}

/*column 4 buttons*/
#column4 button {
    height: 70px;
    width: 70px;
    border-radius: 8px;
    border: 1.2px solid black;
    border-radius: 8px;
    background-color: rgb(247, 188, 24);

    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 30px;
    color: rgb(66, 64, 64);
}

#column3 #bPercent, #column3 #bDecimal {
    font-size: 30px;
}

